@@ -1,8 +1,11 @@
-2007-08-08  Johanna Fleckner  <fleckner@lxplus205.cern.ch>
+2007-08-10  Johanna Fleckner  <Johanna.Fleckner@uni-mainz.de>
+        * add src/SourceIDTool.cxx TrigT1CaloMonitoring/SourceIDTool.h for dumping SourceIDs that exist in the SW
+
+2007-08-08  Johanna Fleckner  <Johanna.Fleckner@uni-mainz.de>
 	* add share/TrigT1CaloMonitoring_onlineOptions.py for running (later on) the monitoring online
 	* update PPr, CP and JEP - monioring - (hopefully!) last update for M4 ;)
 	
-2007-08-01  Johanna Fleckner  <fleckner@lxplus203.cern.ch>
+2007-08-01  Johanna Fleckner  <Johanna.Fleckner@uni-mainz.de>
 	* add comments in all tools
 	* add CaloTTMon for comparison of Calorimeter data with TriggerTower
 	* expand monitoring with queries (some histograms like transmission check will only produced for BS data)
